--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation 'com.android.support:design:29.0.0-alpha1'
+    implementation 'com.android.support:appcompat-v7:29.0.0-alpha3'
+    implementation 'com.android.support:design:29.0.0-alpha3'
 
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.0.0'
