--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,12 +66,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:design:29.0.0-alpha1'
-    implementation 'com.android.support:appcompat-v7:29.0.0-alpha3'
-    implementation 'com.android.support:design:29.0.0-alpha3'
 
-    //noinspection GradleCompatible
-    implementation 'com.android.support:cardview-v7:28.0.0'
 
 
 
@@ -92,4 +87,5 @@ dependencies {
 
     // Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
+    implementation 'com.android.support:design:28.0.0'
 }
