--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,5 @@ dependencies {
     testImplementation "androidx.room:room-testing:$room_version"
 
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0-beta01'
 }
