--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.2.2'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     testImplementation 'junit:junit:4.13'
-    implementation 'com.google.firebase:firebase-core:17.4.1'
+    implementation 'com.google.firebase:firebase-core:17.4.2'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -71,6 +71,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation """com.android.support:appcompat-v7:21.0.3"""
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
@@ -90,4 +91,6 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.material:material:1.0.0-beta01'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
