Erro no nav controller

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pb_android_radion">
+    package="com.projeto.pb_android_radion">
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -12,14 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.projeto.pb_android_radion.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar"
             android:noHistory="true"
             >
         </activity>
 
-        <activity android:name=".LoginActivity">
+        <activity android:name="com.projeto.pb_android_radion.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"
                     android:noHistory="true"/>
