Revert "Mudando search", mudança no package e app e correção do drawer
This reverts commit 6a6e5f8b106a4cd5db117253106279355e3250c1.

# Conflicts:
#	app/src/main/java/com.projeto.pb_android_radion/adapter/SearchAdapter.kt
#	app/src/main/java/com.projeto.pb_android_radion/fragment/LoginFragment.kt
#	app/src/main/java/com.projeto.pb_android_radion/viewModel/SearchViewModel.kt
#	app/src/main/java/com.projeto.pb_android_radion/viewModel/UsuarioViewModel.kt
#	app/src/main/java/com/example/pb_android_radion/MainActivity.kt
#	app/src/main/res/menu/activity_main_drawer.xml
#	app/src/main/res/navigation/nav_host_principal.xml

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@
 /captures
 .externalNativeBuild
 .cxx
-/app/schemas/com.projeto.pb_android_radion.database.AppDatabase/1.json
+/app/schemas/com.example.pb_android_radion.database.AppDatabase/1.json
